Create Update Delete on Client

--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -29,6 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Latihan" asp-action="JsFundamental">Latihan Javascript Fundamental</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Latihan" asp-action="ConsumeAPI">Consume API</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Latihan" asp-action="ConsumeAPIFromProject">Consume API From Project</a>
+                        </li>
                     </ul>
                 </div>
             </div>
