adding graph for gender

--- a/Client/Views/Latihan/ConsumeAPIFromProject.cshtml
+++ b/Client/Views/Latihan/ConsumeAPIFromProject.cshtml
@@ -26,6 +26,11 @@
     </table>
 </div>
 
+<div class="chart-container">
+    <canvas id="genderChart"></canvas>
+</div>
+
+
 <!-- Modal -->
 <div class="modal fade" id="employeeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
