--- a/Client/Views/Shared/_Layout-consumeAPIFromProject.cshtml
+++ b/Client/Views/Shared/_Layout-consumeAPIFromProject.cshtml
@@ -32,6 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/id.min.js" integrity="sha512-he8U4ic6kf3kustvJfiERUpojM8barHoz0WYpAUDWQVn61efpm3aVAD8RWL8OloaDDzMZ1gZiubF9OSdYBqHfQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.16/dist/sweetalert2.all.min.js" integrity="sha256-sDADEpkQC51sa0E7+enXEvWWlfE4TvVIw/Q7Cg+uy/o=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="~/js/consume_APIFromProject.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
